@@ -1,6 +1,5 @@
 package cpen221.mp2;
 
-import java.awt.desktop.AboutHandler;
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
@@ -233,7 +232,6 @@ public class DWInteractionGraph {
     protected List<List<Integer>> getDWI_data() {
         return new ArrayList<>(this.emailData);
     }
-    /* ------- Task 2 ------- */
 
     /**
      * Given an int array, [t0, t1], reports email transaction details.
@@ -343,10 +341,10 @@ public class DWInteractionGraph {
 
         sendRanking =
             sendRanking.stream().sorted(Comparator.comparing(Element::getValue).reversed())
-                .toList();
+                .collect(Collectors.toList());
         receiveRanking =
             receiveRanking.stream().sorted(Comparator.comparing(Element::getValue).reversed())
-                .toList();
+                .collect(Collectors.toList());
 
         if (interactionType == SendOrReceive.SEND) {
             validSendRank =
@@ -369,8 +367,6 @@ public class DWInteractionGraph {
         }
         return wantedData;
     }
-
-    /* ------- Task 3 ------- */
 
     /**
      * performs breadth first search on the DWInteractionGraph object
@@ -425,33 +421,40 @@ public class DWInteractionGraph {
      */
     public List<Integer> DFS(int userID1, int userID2) {
         Set<Integer> isVisited = new LinkedHashSet<>();
+        boolean found = false;
 
         if (!(userList.contains(userID1) || userList.contains(userID2))) {
             return null;
         }
 
-        recursiveDFS(userID1, userID2, isVisited);
+        found = recursiveDFS(userID1, userID2, isVisited);
+
+        if (!found) {
+            return null;
+        }
 
         return new ArrayList<>(isVisited);
     }
 
-    private void recursiveDFS(Integer user, Integer targetUser, Set<Integer> isVisited) {
+    private boolean recursiveDFS(Integer user, Integer targetUser, Set<Integer> isVisited) {
+        boolean found = false;
         isVisited.add(user);
-
+        if (user == targetUser) {
+            found = true;
+        }
         for (Edge adjacent : DWG.get(user)) {
             if (!(isVisited.contains(adjacent.getReceiver())) && !(isVisited.contains(targetUser))) {
-                recursiveDFS(adjacent.getReceiver(), targetUser, isVisited);
+                found = recursiveDFS(adjacent.getReceiver(), targetUser, isVisited);
             }
+
         }
+        return found;
     }
 
-    /* ------- Task 4 ------- */
-
     /**
-     * Read the MP README file carefully to understand
-     * what is required from this method.
+     * Calculate the maximum number of users polluted by the malicious email in N hours
      *
-     * @param hours
+     * @param hours is delaying time of triggering fire wall after the first attack of a hacker
      * @return the maximum number of users that can be polluted in N hours
      */
     public int MaxBreachedUserCount(int hours) {
